Eliminate dependency to Guava.